# RHEED-tools

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
docs/: PUBLISHING.md
src/rheed_tools/: __init__.py  notebook_utils.py  signals.py
src/rheed_tools/analysis/: __init__.py  background.py  curve_fitting.py  diffraction_2d.py  diffuse.py  geometry.py  growth_mode.py  kikuchi.py  morphology.py  reciprocal.py  reconstruction.py  roi.py  specular.py  spot_fit.py  trace_1d.py  visualization.py
src/rheed_tools/datasets/: __init__.py  datafed.py  hdf5.py
src/rheed_tools/io/: __init__.py  image_io.py  imm_io.py  trace_io.py  video_io.py
src/rheed_tools/visualization/: __init__.py  layout.py
tests/: conftest.py  test_smoke.py
