[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RHEED-tools"
version = "0.2.1"
description = "Reusable analysis, visualization, and file I/O tools for RHEED data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["RHEED", "PLD", "analysis", "visualization", "materials"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
data = [
  "h5py>=3.11",
  "imageio>=2.34",
]
plot = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
  "notebook>=7.0",
  "ipykernel>=6.0",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
  "h5py>=3.11",
  "scipy>=1.13",
]

[project.urls]
Repository = "https://github.com/yig319/RHEED-tools"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rheed_tools*"]
